feat: toList() 수정